- Update to latest release.

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "knuth-local.tar.xz": d93eefc6b237116fcc844536670bae03e7c562f8
+  knuth-local.tar.xz: aae46b0fae014965979c070b89d3d0a16da292e6
