--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  knuth-local.tar.xz: b03b539182f1431df5c1d0227e146a6b218f9dc6
+  knuth-local.r57963.tar.xz: a9540d9718066fbf4ee0519ce0fc02bb556a44a8
